<package format="3">
    <name>warehouse_ros_graph</name>
    <version>0.0.1</version>
    <description>
        Implementation of warehouse_ros for graph databases
    </description>
    <author email="dev@graph-power.com">Alex Kumundzhiev</author>
    <maintainer email="dev@graph-power.com">Graph Power</maintainer>

    <license>Apache 2.0</license>
    <url>http://ros.org/wiki/warehouse_ros</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>mgclient</build_depend>

    <depend>warehouse_ros</depend>

    <test_depend>rostest</test_depend>
    <test_depend>memgraph</test_depend>

    <export>
        <warehouse_ros plugin="${prefix}/graph_database_connection_plugin_description.xml" />
    </export>
</package>  