<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>warehouse_ros_graph</name>
    <version>0.0.1</version>
    <description> Implementation of warehouse_ros for graph databases </description>
    <maintainer email="dev@graph-power.com">Graph Power</maintainer>

    <license>Apache 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>warehouse_ros</depend>

    <export>
        <warehouse_ros plugin="${prefix}/graph_database_connection_plugin_description.xml" />
    </export>
</package>  